<resources>
    <string name="app_name">鼎搜客</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_customer">搜客户</string>
    <string name="customer_management">管客户</string>
    <string name="log_name">鼎搜客DM-SOKE</string>
    <string name="earn_points">赚积分</string>
    <string name="about_me">我</string>
    <string name="signin_text">登录</string>
    <string name="user_name">用户名</string>
    <string name="new_password">请输入新密码</string>
    <string name="Login">登录</string>
    <string name="register">新用户注册</string>
    <string name="dm_skb">DM-SOKE</string>
    <string name="forget_password">忘记密码?</string>
    <string name="title_activity_lregistrationactivity">Sign in</string>
    <string name="register1">注册</string>
    <string name="phone_text">请输入您的手机号码</string>
    <string name="Verification_Code_text">请输入验证码</string>
    <string name="Get_verification_code">获取验证码</string>
    <string name="has">已经有账户?</string>
    <string name="to_log_on">去登录</string>
    <string name="forget_password_one">忘记密码</string>
    <string name="password">密码</string>
    <string name="Determine">确定</string>
    <string name="earn_points_remark1">鼎搜客不用充值也可以赚取积分,只要完成以下三种</string>
    <string name="earn_points_remark2">任务就可以免费获赠积分。</string>
    <string name="earn_points_remark3">•客户信息准确度评价</string>
    <string name="earn_points_remark4">1次=5积分</string>
    <string name="earn_points_remark5">评价现有客户信息的准确度,经鼎谋审核员审核属实后,每个有效评价获取5个积分
        (10个积分可下载一个客户详细信息)</string>
    <string name="evaluate">我要评价客户</string>
    <string name="earn_points_remark6">•客户信息纠错</string>
    <string name="earn_points_remark7">1次=20积分</string>
    <string name="earn_points_remark8">发现现有客户信息错误,并能提供正确信息,经鼎谋审核员审核属实后,每个有效纠错可获取20个积分
        (10个积分可下载一个客户详细信息)</string>
    <string name="correction">我要客户纠错</string>
    <string name="earn_points_remark9">•上报客户信息</string>
    <string name="earn_points_remark10">1次=30积分</string>
    <string name="earn_points_remark11">鼎谋鼎搜客数据库中没有的客户信息,如果用户按格式上报进来,经鼎谋审核员审核属实后,每个有效客户信息可获取30个积分
        (10个积分可下载一个客户详细信息)</string>
    <string name="report">手工填写上报客户</string>
    <string name="user_information">用户信息</string>
    <string name="username">测试</string>
    <string name="Commodityaddress">换购商品物流地址</string>
    <string name="Integralmanagement">积分管理</string>
    <string name="Integralbalance">积分余额</string>
    <string name="corporatename">请输入公司名称</string>
    <string name="corporatename1">公司名称</string>
    <string name="corporatename2">公司名称*</string>

    <string name="city">请输入所在城市</string>
    <string name="rechargequery">充值查询</string>
    <string name="Integralcostbreakdown">积分消耗明细</string>
    <string name="Integraldetail">积分明细</string>
    <string name="Points">积分充值</string>
    <string name="Integralbill">积分账单</string>
    <string name="exchange">积分兑换</string>
    <string name="Return">返回</string>
    <string name="address">物流地址</string>
    <string name="EMSaddress">请输入邮寄地址</string>
    <string name="Addressee">请输入收件人</string>
    <string name="Telephone">请输入联系电话</string>
    <string name="date">日期</string>
    <string name="period">期初</string>
    <string name="income">积分收入</string>
    <string name="expenditure">积分支出</string>
    <string name="thefinal">期末</string>
    <string name="XM">项目</string>
    <string name="balance">余额</string>
    <string name="Integralcostbreakdownquery">积分消耗明细查询</string>
    <string name="SP">兑换商品</string>
    <string name="HF">花费积分</string>
    <string name="exchange1">积分兑换查询</string>
    <string name="CZJFCZJFCZJF">充值金额</string>
    <string name="CZJF">充值积分</string>
    <string name="CZCX">充值查询</string>
    <string name="setup">系统设置</string>
    <string name="full_name">姓名</string>
    <string name="phone">手机</string>
    <string name="XGMM">修改密码</string>
    <string name="WX">微信</string>
    <string name="sina">新浪微博</string>
    <string name="QQ">QQ</string>
    <string name="GYDM">关于鼎谋</string>
    <string name="share">分享软件</string>
    <string name="sign_out">退出登录</string>
    <string name="old_password">请输入旧密码</string>
    <string name="new_password1">请确认新密码</string>
    <string name="JFCZ">积分充值</string>
    <string name="ZHJF">账户积分余额:0积分</string>
    <string name="CZJE">充值金额</string>
    <string name="discount">折扣率</string>
    <string name="payment">应付款</string>
    <string name="WXZF">微信支付</string>
    <string name="payZF">支付宝支付</string>
    <string name="CZCG">您的充值已经成功!</string>
    <string name="recognition">认可度</string>
    <string name="visit">去拜访</string>
    <string name="plan">提醒计划</string>
    <string name="evaluate1">我要评价</string>
    <string name="errorcorrection">我要纠错</string>
    <string name="basic">基本信息</string>
    <string name="mecemo">我要备注</string>
    <string name="Contacts">联系人信息</string>
    <string name="Contacts_name">联系人*</string>
    <string name="Contacts_hint">请输入联系人</string>
    <string name="qyxx">企业信息</string>
    <string name="channel">渠道信息</string>
    <string name="themain">主营商品</string>
    <string name="introduce">公司介绍</string>
    <string name="business_information">工商信息</string>
    <string name="real">信息真实认可度</string>
    <string name="time">选择时间</string>
    <string name="add_plan">添加计划</string>
    <string name="error_correction_cemo">亲,信息有错请告诉我们哦!</string>
    <string name="error_correction_cem1">如果此条信息内容不对,请您反馈给我们,我们将竭\n诚为您提供做优质的企业信息!</string>
    <string name="error_correction_cem2">每纠错1个客户可领赏20个积分</string>
    <string name="without_this_customer">无此客户</string>
    <string name="channel_no">客户渠道信息有误</string>
    <string name="feedback">请输入您的反馈信息</string>
    <string name="basic_information_error">客户主营商品有误</string>
    <string name="phone_error">企业电话号码信息有误</string>
    <string name="address_error">企业地址信息有误</string>
    <string name="EMS_error">添加企业其他相关信息</string>
    <string name="Contacts_error">联系人基本信息错误</string>
    <string name="cust_collection">客户收藏</string>
    <string name="collection">收藏</string>
    <string name="contact">待联系</string>
    <string name="ok_contact">已联系</string>
    <string name="stay_in_touch_today">今天待联系</string>
    <string name="to_be_contacted_tomorrow">明天待联系</string>
    <string name="history_to_be_linked">历史待联系</string>
    <string name="future_to_be_contacted">未来待联系</string>
    <string name="Contact_number">联系电话*</string>
    <string name="Contact_number_hint">请输入联系电话</string>
    <string name="stay_in_touch_today_ok">今天已联系</string>
    <string name="to_be_contacted_tomorrow_ok">明天已联系</string>
    <string name="history_to_be_linked_ok">历史已联系</string>
    <string name="future_to_be_contacted_ok">未来已联系</string>
    <string name="fcust_name">客户名称</string>
    <string name="confirm">确认修改</string>
    <string name="umeng_sharebutton_custom">自定义分享按钮</string>
    <string name="industry">所在行业</string>
    <string name="industry_hint">请输入所在行业</string>
    <string name="briefing">公司简介</string>
    <string name="briefing_hint">请输入公司简介</string>
    <string name="upgraded">检查更新</string>
    <string name="number">使用人\n员数量*</string>
    <string name="number_hint">请输入使用人员数量</string>
    <string name="cemo">备注说明</string>
    <string name="cemo_hint">请输入备注说明</string>
    <!--微信-->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="launch_from_wx">Launch From Weixin</string>
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>

    <!-- PayActivity -->
    <string name="pay_by_wx">客户端签名微信支付</string>
    <string name="pay_by_wxap">服务器端签名微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    <string name="app_tip">提示</string>
    <string name="apply">厂家免费使用积分申请表</string>
    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
