<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96px"
        android:background="@drawable/bg2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="onClickAuth"
            android:id="@+id/Return"
            >
            <ImageView
                android:layout_width="18px"
                android:layout_height="35px"
                android:layout_marginLeft="30px"
                android:layout_marginTop="30px"
                android:background="@drawable/arrow_left_icon"/>
            <TextView
                android:layout_width="70px"
                android:layout_height="37px"
                android:layout_marginTop="27px"
                android:textSize="35px"
                android:textColor="@color/white"
                android:layout_marginLeft="13px"
                android:text="@string/Return"/>
        </LinearLayout>
        <TextView
            android:id="@+id/register_main"
            android:layout_width="521px"
            android:layout_height="37px"
            android:gravity="center"
            android:layout_marginLeft="13px"
            android:textSize="35px"
            android:textColor="@color/white"
            android:layout_marginTop="27px"
            />
        <TextView
            android:layout_width="72px"
            android:layout_height="37px"
            android:layout_marginTop="27px"
            android:textColor="@color/white"
            android:textSize="35px"
            android:id="@+id/ok"
            android:text="提交"
            android:onClick="onClickAuth"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5px"
        android:layout_height="100px">
        <TextView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="30px"
            android:gravity="center|right"
            android:text="@string/corporatename2"
            android:textColor="@color/umeng_black"
            android:textSize="30px"/>
        <com.example.dm_skb.widget.ClearEditText
            android:layout_marginLeft="180px"
            android:layout_marginRight="30px"
            android:layout_width="match_parent"
            android:paddingLeft="5px"
            android:layout_height="100px"
            android:hint="@string/corporatename"
            android:textColorHint="#999999"
            android:background="@drawable/shape_editext"
            android:textSize="24px"
            android:textColor="#000000"
            android:inputType="textMultiLine"
            android:id="@+id/fcust_name"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10px"
        android:layout_height="100px">
        <TextView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="30px"
            android:gravity="center|right"
            android:text="@string/Contacts_name"
            android:textColor="@color/umeng_black"
            android:textSize="30px"/>
        <com.example.dm_skb.widget.ClearEditText
            android:layout_marginLeft="180px"
            android:layout_marginRight="30px"
            android:layout_width="match_parent"
            android:paddingLeft="5px"
            android:layout_height="100px"
            android:hint="@string/Contacts_hint"
            android:textColorHint="#999999"
            android:background="@drawable/shape_editext"
            android:textSize="24px"
            android:textColor="#000000"
            android:inputType="textMultiLine"
            android:id="@+id/Corporate_name"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10px"
        android:layout_height="100px">
        <TextView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="30px"
            android:gravity="center|right"
            android:text="@string/Contact_number"
            android:textColor="@color/umeng_black"
            android:textSize="30px"/>
        <com.example.dm_skb.widget.ClearEditText
            android:layout_marginLeft="180px"
            android:layout_marginRight="30px"
            android:layout_width="match_parent"
            android:paddingLeft="5px"
            android:layout_height="100px"
            android:hint="@string/Contact_number_hint"
            android:textColorHint="#999999"
            android:background="@drawable/shape_editext"
            android:textSize="24px"
            android:textColor="#000000"
            android:inputType="phone"
            android:id="@+id/Contact_number"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10px"
        android:layout_height="100px">
        <TextView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="30px"
            android:gravity="center|right"
            android:text="@string/industry"
            android:textColor="@color/umeng_black"
            android:textSize="30px"/>
        <com.example.dm_skb.widget.ClearEditText
            android:layout_marginLeft="180px"
            android:layout_marginRight="30px"
            android:layout_width="match_parent"
            android:paddingLeft="5px"
            android:layout_height="100px"
            android:hint="@string/industry_hint"
            android:textColorHint="#999999"
            android:background="@drawable/shape_editext"
            android:textSize="24px"
            android:textColor="#000000"
            android:inputType="phone"
            android:id="@+id/industry"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10px"
        android:layout_height="100px">
        <TextView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="30px"
            android:gravity="center|right"
            android:text="@string/briefing"
            android:textColor="@color/umeng_black"
            android:textSize="30px"/>
        <com.example.dm_skb.widget.ClearEditText
            android:layout_marginLeft="180px"
            android:layout_marginRight="30px"
            android:layout_width="match_parent"
            android:paddingLeft="5px"
            android:layout_height="100px"
            android:hint="@string/briefing_hint"
            android:textColorHint="#999999"
            android:background="@drawable/shape_editext"
            android:textSize="24px"
            android:textColor="#000000"
            android:inputType="phone"
            android:id="@+id/briefing"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10px"
        android:layout_height="100px">
        <TextView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="20px"
            android:gravity="center|right"
            android:text="@string/number"
            android:textColor="@color/umeng_black"
            android:textSize="30px"/>
        <com.example.dm_skb.widget.ClearEditText
            android:layout_marginLeft="180px"
            android:layout_marginRight="30px"
            android:layout_width="match_parent"
            android:paddingLeft="5px"
            android:layout_height="100px"
            android:hint="@string/number_hint"
            android:textColorHint="#999999"
            android:background="@drawable/shape_editext"
            android:textSize="24px"
            android:textColor="#000000"
            android:inputType="phone"
            android:id="@+id/number"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10px"
        android:layout_height="100px">
        <TextView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="30px"
            android:gravity="center|right"
            android:text="@string/cemo"
            android:textColor="@color/umeng_black"
            android:textSize="30px"/>
        <com.example.dm_skb.widget.ClearEditText
            android:layout_marginLeft="180px"
            android:layout_marginRight="30px"
            android:layout_width="match_parent"
            android:paddingLeft="5px"
            android:layout_height="100px"
            android:hint="@string/cemo_hint"
            android:textColorHint="#999999"
            android:background="@drawable/shape_editext"
            android:textSize="24px"
            android:textColor="#000000"
            android:inputType="phone"
            android:id="@+id/cemo"
            />
    </RelativeLayout>
</com.zhy.autolayout.AutoLinearLayout>
