<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96px"
        android:background="@drawable/bg2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="onClickAuth"
            android:id="@+id/Return"
            >
            <ImageView
                android:layout_width="18px"
                android:layout_height="35px"
                android:layout_marginLeft="30px"
                android:layout_marginTop="30px"
                android:background="@drawable/arrow_left_icon"/>
            <TextView
                android:layout_width="70px"
                android:layout_height="37px"
                android:layout_marginTop="27px"
                android:textSize="35px"
                android:textColor="@color/white"
                android:layout_marginLeft="13px"
                android:text="@string/Return"/>
        </LinearLayout>
        <TextView
            android:id="@+id/register_main"
            android:layout_width="284px"
            android:layout_height="37px"
            android:gravity="center"
            android:layout_marginLeft="102px"
            android:textSize="35px"
            android:textColor="@color/white"
            android:layout_marginTop="27px"
            android:text="@string/earn_points" />
    </LinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/deepblue"
        android:orientation="vertical">
        <TextView
            android:layout_width="690px"
            android:layout_height="32px"
            android:textStyle="bold"
            android:layout_marginLeft="20px"
            android:layout_marginRight="40px"
            android:textSize="30px"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="34px"
            android:text="@string/earn_points_remark1" />
        <TextView
            android:layout_width="690px"
            android:layout_height="32px"
            android:textStyle="bold"
            android:layout_marginLeft="20px"
            android:layout_marginRight="40px"
            android:textSize="30px"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="5px"
            android:text="@string/earn_points_remark2" />
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="710px"
            android:layout_height="280px"
            android:layout_marginTop="20px"
            android:layout_marginLeft="20px"
            android:background="@drawable/corners_bg"
            android:orientation="vertical">
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="288px"
                android:layout_height="32px"
                android:text="@string/earn_points_remark3"
                android:textSize="30px"
                android:layout_marginLeft="28px"
                android:layout_marginTop="28px"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="148px"
                android:layout_height="32px"
                android:textSize="30px"
                android:text="@string/earn_points_remark4"
                android:textColor="#ffa200"
                android:layout_marginTop="28px"
                android:layout_marginLeft="20px"
                />
                </com.zhy.autolayout.AutoLinearLayout>
            <TextView
                android:layout_width="650px"
                android:layout_height="80px"
                android:textStyle="bold"
                android:layout_marginTop="30px"
                android:layout_marginLeft="30px"
                android:textSize="25px"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/earn_points_remark5" />
            <Button
                android:id="@+id/evaluate"
                android:onClick="onClickAuth"
                android:layout_width="315px"
                android:layout_height="64px"
                android:background="@drawable/btn5"
                android:textColor="@color/white"
                android:text="@string/evaluate"
                android:layout_marginTop="22px"
                android:textSize="30px"
                android:layout_marginLeft="365px"
                android:layout_marginRight="64px"/>
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="710px"
            android:layout_height="320px"
            android:layout_marginTop="20px"
            android:layout_marginLeft="20px"
            android:background="@drawable/corners_bg"
            android:orientation="vertical">
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="288px"
                    android:layout_height="32px"
                    android:text="@string/earn_points_remark6"
                    android:textSize="30px"
                    android:layout_marginLeft="28px"
                    android:layout_marginTop="28px"
                    android:textColor="#000000"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="32px"
                    android:textSize="30px"
                    android:text="@string/earn_points_remark7"
                    android:textColor="#ffa200"
                    android:layout_marginTop="28px"
                    android:layout_marginLeft="20px"
                    />
            </com.zhy.autolayout.AutoLinearLayout>
            <TextView
                android:layout_width="650px"
                android:layout_height="120px"
                android:textStyle="bold"
                android:layout_marginTop="30px"
                android:layout_marginLeft="30px"
                android:textSize="25px"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/earn_points_remark8" />
            <Button
                android:id="@+id/correction"
                android:onClick="onClickAuth"
                android:layout_width="315px"
                android:layout_height="64px"
                android:background="@drawable/btn5"
                android:textColor="@color/white"
                android:text="@string/correction"
                android:layout_marginTop="22px"
                android:textSize="30px"
                android:layout_marginLeft="365px"
                android:layout_marginRight="64px"/>
        </com.zhy.autolayout.AutoLinearLayout>



        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="710px"
            android:layout_height="320px"
            android:layout_marginTop="20px"
            android:layout_marginLeft="20px"
            android:background="@drawable/corners_bg"
            android:orientation="vertical">
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="288px"
                    android:layout_height="32px"
                    android:text="@string/earn_points_remark9"
                    android:textSize="30px"
                    android:layout_marginLeft="28px"
                    android:layout_marginTop="28px"
                    android:textColor="#000000"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="32px"
                    android:textSize="30px"
                    android:text="@string/earn_points_remark10"
                    android:textColor="#ffa200"
                    android:layout_marginTop="28px"
                    android:layout_marginLeft="20px"
                    />
            </com.zhy.autolayout.AutoLinearLayout>
            <TextView
                android:layout_width="650px"
                android:layout_height="120px"
                android:textStyle="bold"
                android:layout_marginTop="30px"
                android:layout_marginLeft="30px"
                android:textSize="25px"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/earn_points_remark11" />
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <Button
                   android:id="@+id/card"
                   android:onClick="onClickAuth"
                   android:layout_width="315px"
                   android:layout_height="64px"
                   android:background="@drawable/btn5"
                   android:textColor="@color/white"
                   android:text="拍名片上报客户"
                   android:layout_marginTop="22px"
                   android:textSize="30px"
                   android:layout_marginLeft="25px"
                   />
            <Button
                android:id="@+id/report"
                android:onClick="onClickAuth"
                android:layout_width="315px"
                android:layout_height="64px"
                android:background="@drawable/btn5"
                android:textColor="@color/white"
                android:text="@string/report"
                android:layout_marginTop="22px"
                android:textSize="30px"
                android:layout_marginLeft="30px"
                android:layout_marginRight="64px"/>
           </LinearLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
